# Tree_Explorer

./: .gitignore  CMakeLists.txt
sources/: CMakeLists.txt  main.cpp
sources/algortihms/: LinearProgrammingSolver.cpp  LinearProgrammingSolver.h  TreeGenerator.cpp  TreeGenerator.h  gloutonSolver.cpp  gloutonSolver.h  instanceGenrator.cpp  instanceGenrator.h  optimalSolver.cpp  optimalSolver.h
sources/glpk/: glpk_interface.cpp  glpk_interface.h
sources/structures/: AgentTreeExplorationInstance.h  AgentTreeExplorationSolution.h  BinaryTree.h  Edge.h  SimpleTree.h  Tree.h  Tripple.h  Tupple.h  TuppleTree.h
sources/utils/: FileManager.cpp  FileManager.h  Tui.cpp  Tui.h
tests/: CMakeLists.txt  gtest.cpp
tests/Algorithms/: LinearProgrammingSolver_test.cpp  TreeGenerator_test.cpp
tests/glpk/: glpk_interface_test.cpp
tests/lib/googletest-master/googlemock/include/gmock/internal/: gmock-generated-internal-utils.h
tests/structures/: Tree_test.cpp
tests/utils/: FileManager_test.cpp  tui_test.cpp
